# Geo

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
Client/Headers/: MainWindow.h
Client/Resources/: MainWindow.cpp  mainwindow.ui
Server/: CMakeLists.txt  main.cpp
Server/Headers/: Sand.h  Server.h  Soil.h  SoilData.h
Server/Resources/: Sand.cpp  Server.cpp  Soil.cpp  SoilData.cpp
